# yaxp

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  Makefile  README.md  default_11253755747823148602_0_2403.profraw  default_11253755747823148602_0_97199.profraw  default_11277877122006277602_0_2403.profraw  default_11277877122006277602_0_97199.profraw  default_12944734906103700453_0_2403.profraw  default_12944734906103700453_0_97199.profraw  default_13694509266296679829_0_2403.profraw  default_13694509266296679829_0_97199.profraw  default_13700150865491736864_0_2403.profraw  default_13700150865491736864_0_97199.profraw  default_14291765158302545327_0_2403.profraw  default_14291765158302545327_0_97199.profraw  default_1857133565559936694_0_2403.profraw  default_1857133565559936694_0_97199.profraw  default_3661644100775609801_0_2403.profraw  default_3661644100775609801_0_97199.profraw  example-output.json  example-utf16.xsd  example.xsd  here.json  xsdconverter_output.json
.github/workflows/: CI.yml  pyaxp-ci.yml  run_tests.yml  yaxp-cli-cd.yml  yaxp-cli-ci.yml  yaxp-common-ci.yml  yaxp-core.yml
crates/pyaxp/: Cargo.toml  README.md  example-data-avro.csv  example-utf16.xsd  example.xsd  example_clean_avro.xsd  pyproject.toml
crates/pyaxp/src/: lib.rs
crates/pyaxp/tests/: test_avro.py  test_fastavro.py  test_polars.py  test_spark.py
crates/yaxp-cli/: Cargo.toml  README.md  example with spaces.xsd
crates/yaxp-cli/src/: main.rs
crates/yaxp-common/: Cargo.toml  README.md  default_15039775772202567574_0_1153.profraw  default_15039775772202567574_0_285.profraw  default_15039775772202567574_0_932.profraw  default_15039775772202567574_0_97267.profraw  default_15039775772202567574_0_97960.profraw
crates/yaxp-common/src/: tests.rs
crates/yaxp-common/src/xsdp/: parser.rs
crates/yaxp-core/: Cargo.toml  README.md
crates/yaxp-core/src/xsdp/: parser.rs
src/: example-output.json  example-static.json  lib.rs  main.rs
src/convert/: convert.rs
src/xsdp/: parser.rs  xsdp.rs
