[workspace]
resolver = "2"
members = [
  "crates/*",
]

default-members = [
  "crates/*",
]

[workspace.package]
name = "yaxp"
version = "0.1.0"
edition = "2024"
authors = ["Jeroen <jeroen@flexworks.eu>"]
description = "Yet Another XML Parser"
homepage = "https://github.com/opensourceworks-org/yaxp"
repository = "https://github.com/opensourceworks-org/yaxp"
license = "MIT"
