[build-system]
requires = ["maturin>=1.8,<2.0"]
build-backend = "maturin"

[project]
name = "pyaxp"
description = "<yaxp-cli ⚡> Yet Another XSD Parser"
readme = { file = "README.md", content-type = "text/markdown" }
authors = [
    { name = "Jeroen", email = "jeroen@flexworks.eu" }
]

[project.urls]
Homepage = "https://github.com/opensourceworks-org/yaxp"
Documentation = "https://github.com/opensourceworks-org/yaxp/blob/main/crates/pyaxp/README.md"
Repository = "https://github.com/opensourceworks-org/yaxp/blob/main/crates/pyaxp"
Bug Tracker = "https://github.com/opensourceworks-org/yaxp/issues"


requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
dynamic = ["version"]
[tool.maturin]
features = ["pyo3/extension-module"]
