[package]
name = "yaxp-cli"
version = "0.2.3"
edition = "2021"
authors = ["Jeroen <jeroen@flexworks.eu>"]
description = "<yaxp-cli ⚡> Yet Another XML Parser CLI"
homepage = "https://github.com/opensourceworks-org/yaxp"
repository = "https://github.com/opensourceworks-org/yaxp/tree/main/crates/yaxp-cli"
license = "MIT"

[dependencies]
clap = { version = "4.5.23", features = ["derive"] }
yaxp-core = { path = "../yaxp-core", version = "0.1.6" }
serde = { version = "1.0.217", features = ["derive"] }
encoding_rs = "0.8.35"
serde_json = "1.0.138"
